# messaging-application

./: README.md  index.html
message-app/: package-lock.json  package.json
message-app/src/: App.js
message-app/src/pages/: ChatDashboard.css  ChatDashboard.js  ChatRoom.css  ChatRoom.js  LoginPage.css  LoginPage.js
server/: .gitignore  CMakeLists.txt
server/src/: DatabaseManager.cpp  DatabaseManager.h  main.cpp  websocket_server.cpp  websocket_server.h
server/test/: functional_tests.cpp  performance_tests.cpp  stress_tests.cpp  unit_tests.cpp
